# Haruki

./: .gitignore  README.md  pyproject.toml
UNKNOWN.egg-info/: SOURCES.txt
haruki/: cli.py  constants.py
haruki/bots/: __init__.py  haruki.py  kiruha.py
haruki/plugins/: perms.py  ping.py
haruki/plugins/api_helpers/: overseerr_api.py  overseerr_helper.py  radarr_api.py  sonarr_api.py
haruki/plugins/misc/: __init__.py  get_diskspace.py  speedtest.py
haruki/plugins/overseerr/: __init__.py  overseerr_api.py  overseerr_get_requests.py  overseerr_search.py
haruki/plugins/plex/: __init__.py  activity_info.py  get_activity.py  get_stats.py  helper.py  readme.md  stats_info.py  tautulli_api.py  upcoming.py
haruki/plugins/plex_fix/: __init__.py  plex_fix.py  plex_fix_media.py  plex_fix_missing.py
haruki/plugins/plex_request/: __init__.py  overseer_api.py  overseer_search.py  plex_request.py  search_result.py
haruki/plugins/request/: __init__.py  request.py
myenv/: pyvenv.cfg
